--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -325,7 +325,6 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
 
     this.isNoOp = this.rollups.isEmpty() && this.syncRollups.isEmpty();
     if (this.isNoOp || this.rollupControl.ShouldAbortRun__c || SETTINGS.IsEnabled__c == false) {
-      RollupLogger.Instance.log('aborting run, no-op');
       return 'No process Id';
     }
 
@@ -553,7 +552,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
 
     String queryString = RollupQueryBuilder.Current.getQuery(childType, new List<String>(queryFields), 'Id', '!=');
 
-    return startFullRecalc(matchingMetadata, amountOfCalcItems, queryString, objIds, recordIds, childType, null, localInvokePoint);
+    return buildFullRecalcRollup(matchingMetadata, amountOfCalcItems, queryString, objIds, recordIds, childType, null, localInvokePoint).beginAsyncRollup();
   }
 
   @AuraEnabled
@@ -573,7 +572,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
 
     QueryWrapper wrapper = new QueryWrapper(metadata.LookupObject__c, metadata.LookupFieldOnLookupObject__c);
     wrapper.setQuery(metadata.CalcItemWhereClause__c);
-    return performFullRecalculationInner(metadata, wrapper, InvocationPoint.FROM_LWC);
+    return getFullRecalcRollup(metadata, wrapper, InvocationPoint.FROM_LWC).beginAsyncRollup();
   }
 
   global class FlowInput {
@@ -702,13 +701,12 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
 
       flowInput.rollupOperation = flowInput.rollupOperation.toUpperCase();
       String rollupContext = getFlowRollupContext(flowInput);
+      // flow collections are not strongly typed, so we grab from the first record
+      SObjectType sObjectType = flowInput.recordsToRollup[0].getSObjectType();
 
       // this will throw back up to the Flow engine if the inputs don't pass validation
       enforceValidationRules(flowInput);
-      enforceFlowSpecificRules(flowInput);
-
-      // flow collections are not strongly typed, so we grab from the first record
-      SObjectType sObjectType = flowInput.recordsToRollup[0].getSObjectType();
+      enforceFlowSpecificRules(flowInput, sObjectType);
 
       Rollup__mdt rollupMeta = new Rollup__mdt(
         RollupFieldOnCalcItem__c = flowInput.rollupFieldOnCalcItem,
@@ -727,31 +725,26 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         ConcatDelimiter__c = flowInput.concatDelimiter,
         UltimateParentLookup__c = flowInput.ultimateParentLookup,
         RollupToUltimateParent__c = flowInput.rollupToUltimateParent,
-        CalcItem__c = flowInput.isRollupStartedFromParent ? flowInput.calcItemTypeWhenRollupStartedFromParent : String.valueOf(sObjectType)
+        CalcItem__c = flowInput.isRollupStartedFromParent || String.isNotBlank(flowInput.calcItemTypeWhenRollupStartedFromParent)
+          ? flowInput.calcItemTypeWhenRollupStartedFromParent
+          : String.valueOf(sObjectType),
+        IsRollupStartedFromParent__c = flowInput.isRollupStartedFromParent
       );
 
-      if (flowInput.isRollupStartedFromParent) {
-        QueryWrapper wrapper = getParentWhereClause(
-          flowInput.recordsToRollup,
-          flowInput.lookupFieldOnOpObject,
-          flowInput.rollupSObjectName,
-          flowInput.lookupFieldOnCalcItem,
-          flowInput.grandparentRelationshipFieldPath,
-          flowInput.calcItemWhereClause
-        );
-        performFullRecalculationInner(rollupMeta, wrapper, fromInvocable);
-        continue;
+      List<Rollup__mdt> metas = new List<Rollup__mdt>{ rollupMeta };
+      Map<Id, SObject> oldFlowRecords = getOldFlowRecords(flowInput, sObjectType);
+      processCustomMetadata(rollups, metas, flowInput.recordsToRollup, oldFlowRecords, new Set<String>(), rollupContext);
+
+      if (metas.isEmpty() == false) {
+        rollups.add(getRollup(new List<Rollup__mdt>{ rollupMeta }, sObjectType, flowInput.recordsToRollup, oldFlowRecords, null, fromInvocable));
       }
 
-      Map<Id, SObject> oldFlowRecords = getOldFlowRecords(flowInput, sObjectType);
-
-      Rollup roll = getRollup(new List<Rollup__mdt>{ rollupMeta }, sObjectType, flowInput.recordsToRollup, oldFlowRecords, null, fromInvocable);
       if (flowInput.deferProcessing == true) {
-        RollupLogger.Instance.log('deferring processing for rollup', roll);
-        CACHED_ROLLUPS.add(roll);
+        RollupLogger.Instance.log('deferring processing for rollup', rollups);
+        CACHED_ROLLUPS.addAll(rollups);
       } else {
-        RollupLogger.Instance.log('adding invocable rollup to list', roll);
-        rollups.add(roll);
+        RollupLogger.Instance.log('adding invocable rollup to list', rollups);
+        rollups.addAll(rollups);
       }
     }
 
@@ -1488,8 +1481,9 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   }
 
   global static Rollup runFromApex(List<Rollup__mdt> rollupMetadata, Evaluator eval, List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
+    Rollup batchRollup = new RollupAsyncProcessor(InvocationPoint.FROM_APEX);
     if (shouldRunFromTrigger() == false) {
-      return new RollupAsyncProcessor(InvocationPoint.FROM_APEX);
+      return batchRollup;
     }
 
     String rollupContext;
@@ -1515,64 +1509,26 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
       }
     }
 
+    if (shouldReturn) {
+      return batchRollup;
+    }
+
+    List<Rollup> rollups = new List<Rollup>();
+    processCustomMetadata(rollups, rollupMetadata, calcItems, oldCalcItems, mergedParentIds, rollupContext);
+
     SObjectType calcItemSObjectType = calcItems.getSObjectType();
-    for (Integer index = rollupMetadata.size() - 1; index >= 0; index--) {
-      Rollup__mdt rollupInfo = rollupMetadata[index];
-      if (String.isBlank(rollupInfo.CalcItem__c)) {
-        rollupInfo.CalcItem__c = String.valueOf(calcItemSObjectType);
-      }
-      Boolean isIntermediateRollupForGrandparent =
-        rollupInfo.CalcItem__c != String.valueOf(calcItemSObjectType) &&
-        String.isNotBlank(rollupInfo.GrandparentRelationshipFieldPath__c) &&
-        calcItems.isEmpty() == false &&
-        rollupInfo.IsRollupStartedFromParent__c == false &&
-        rollupInfo.LookupObject__c != String.valueOf(calcItemSObjectType);
-
-      if (rollupInfo.IsRollupStartedFromParent__c || isIntermediateRollupForGrandparent) {
-        QueryWrapper queryWrapper = isIntermediateRollupForGrandparent == false
-          ? getParentWhereClause(
-              calcItems,
-              rollupInfo.LookupFieldOnLookupObject__c,
-              rollupInfo.LookupObject__c,
-              rollupInfo.LookupFieldOnCalcItem__c,
-              rollupInfo.GrandparentRelationshipFieldPath__c,
-              rollupInfo.CalcItemWhereClause__c
-            )
-          : getIntermediateGrandparentQueryWrapper(rollupInfo.GrandparentRelationshipFieldPath__c, calcItems, oldCalcItems);
-        if (rollupInfo.IsRollupStartedFromParent__c || isIntermediateRollupForGrandparent && (queryWrapper.hasQuery || isCDC)) {
-          rollupMetadata.remove(index);
-          performFullRecalculationInner(rollupInfo, queryWrapper, InvocationPoint.FROM_APEX);
-        }
-      } else if (mergedParentIds.isEmpty() == false) {
-        QueryWrapper wrapper = new QueryWrapper('', rollupInfo.LookupFieldOnCalcItem__c);
-        for (String mergedParentId : mergedParentIds) {
-          wrapper.addRecordId(mergedParentId);
-        }
-        rollupMetadata.remove(index);
-        performFullRecalculationInner(rollupInfo, wrapper, InvocationPoint.FROM_APEX);
-      }
-
-      // if the same items get run through different rollup operations in the same transaction (rare, but not impossible ...)
-      // we need to reset the CMDT to the correct base operation prior to appending the new context
-      rollupInfo.RollupOperation__c =
-        rollupContext +
-        (rollupInfo.RollupOperation__c.contains('UPDATE_') || rollupInfo.RollupOperation__c.contains('DELETE_')
-          ? rollupInfo.RollupOperation__c.substringAfter('_')
-          : rollupInfo.RollupOperation__c);
-    }
-    shouldReturn = rollupMetadata.isEmpty();
-
-    if (shouldReturn == false) {
-      if (CACHED_APEX_OPERATIONS.containsKey(calcItemSObjectType)) {
-        CACHED_APEX_OPERATIONS.get(calcItemSObjectType).add(apexContext);
-      } else {
-        CACHED_APEX_OPERATIONS.put(calcItemSObjectType, new Set<TriggerOperation>{ apexContext });
-      }
+    if (CACHED_APEX_OPERATIONS.containsKey(calcItemSObjectType)) {
+      CACHED_APEX_OPERATIONS.get(calcItemSObjectType).add(apexContext);
+    } else {
+      CACHED_APEX_OPERATIONS.put(calcItemSObjectType, new Set<TriggerOperation>{ apexContext });
     }
 
-    return shouldReturn
-      ? new RollupAsyncProcessor(InvocationPoint.FROM_APEX)
-      : getRollup(rollupMetadata, calcItemSObjectType, calcItems, oldCalcItems, eval, InvocationPoint.FROM_APEX);
+    if (rollupMetadata.isEmpty() == false) {
+      rollups.add(getRollup(rollupMetadata, calcItemSObjectType, calcItems, oldCalcItems, eval, InvocationPoint.FROM_APEX));
+    }
+
+    flattenBatches(batchRollup, rollups);
+    return batchRollup;
   }
 
   /** end global-facing section, begin public/private static helpers */
@@ -1657,7 +1613,63 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     return hasExceededLimits && isDeferralAllowed;
   }
 
-  private static String performFullRecalculationInner(Rollup__mdt meta, QueryWrapper queryWrapper, InvocationPoint invokePoint) {
+  private static void processCustomMetadata(
+    List<Rollup> rollups,
+    List<Rollup__mdt> metas,
+    List<SObject> calcItems,
+    Map<Id, SObject> oldCalcItems,
+    Set<String> mergedParentIds,
+    String rollupContext
+  ) {
+    SObjectType calcItemSObjectType = calcItems.getSObjectType();
+    for (Integer index = metas.size() - 1; index >= 0; index--) {
+      Rollup__mdt meta = metas[index];
+      Boolean isIntermediateRollupForGrandparent =
+        meta.CalcItem__c != String.valueOf(calcItemSObjectType) &&
+        String.isNotBlank(meta.GrandparentRelationshipFieldPath__c) &&
+        calcItems.isEmpty() == false &&
+        meta.IsRollupStartedFromParent__c == false &&
+        meta.LookupObject__c != String.valueOf(calcItemSObjectType);
+
+      if (String.isBlank(meta.CalcItem__c)) {
+        meta.CalcItem__c = String.valueOf(calcItemSObjectType);
+      }
+
+      if (meta.IsRollupStartedFromParent__c || isIntermediateRollupForGrandparent) {
+        QueryWrapper queryWrapper = isIntermediateRollupForGrandparent == false
+          ? getParentWhereClause(
+              calcItems,
+              meta.LookupFieldOnLookupObject__c,
+              meta.LookupObject__c,
+              meta.LookupFieldOnCalcItem__c,
+              meta.GrandparentRelationshipFieldPath__c,
+              meta.CalcItemWhereClause__c
+            )
+          : getIntermediateGrandparentQueryWrapper(meta.GrandparentRelationshipFieldPath__c, calcItems, oldCalcItems);
+        if (meta.IsRollupStartedFromParent__c || isIntermediateRollupForGrandparent && (queryWrapper.hasQuery || isCDC)) {
+          metas.remove(index);
+          rollups.add(getFullRecalcRollup(meta, queryWrapper, InvocationPoint.FROM_APEX));
+        }
+      } else if (mergedParentIds.isEmpty() == false) {
+        QueryWrapper wrapper = new QueryWrapper('', meta.LookupFieldOnCalcItem__c);
+        for (String mergedParentId : mergedParentIds) {
+          wrapper.addRecordId(mergedParentId);
+        }
+        metas.remove(index);
+        rollups.add(getFullRecalcRollup(meta, wrapper, InvocationPoint.FROM_APEX));
+      }
+
+      // if the same items get run through different rollup operations in the same transaction (rare, but not impossible ...)
+      // we need to reset the CMDT to the correct base operation prior to appending the new context
+      meta.RollupOperation__c =
+        rollupContext +
+        (meta.RollupOperation__c.contains('UPDATE_') || meta.RollupOperation__c.contains('DELETE_')
+          ? meta.RollupOperation__c.substringAfter('_')
+          : meta.RollupOperation__c);
+    }
+  }
+
+  private static Rollup getFullRecalcRollup(Rollup__mdt meta, QueryWrapper queryWrapper, InvocationPoint invokePoint) {
     // just how many items are we talking, here? If it's less than the query limit, we can proceed
     // otherwise, kick off a batch to fetch the calc items and then chain into the regular code path
     SObjectType childType = getSObjectFromName(meta.CalcItem__c).getSObjectType();
@@ -1670,7 +1682,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     );
 
     Set<String> objIds = new Set<String>(); // get everything that doesn't have a null Id - a pretty trick
-    Set<Id> recordIds = queryWrapper.recordIds; // also used below, bound to the "queryString" variable
+    Set<Id> recordIds = queryWrapper.recordIds;
     Integer amountOfCalcItems = getCountFromDb(countQuery, objIds, recordIds);
 
     Set<String> queryFields = new Set<String>{ 'Id', meta.RollupFieldOnCalcItem__c, meta.LookupFieldOnCalcItem__c };
@@ -1678,10 +1690,10 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     queryFields.addAll(whereEval.getQueryFields());
     String queryString = RollupQueryBuilder.Current.getQuery(childType, new List<String>(queryFields), 'Id', '!=', queryWrapper.getQuery());
 
-    return startFullRecalc(new List<Rollup__mdt>{ meta }, amountOfCalcItems, queryString, objIds, recordIds, childType, whereEval, invokePoint);
+    return buildFullRecalcRollup(new List<Rollup__mdt>{ meta }, amountOfCalcItems, queryString, objIds, recordIds, childType, whereEval, invokePoint);
   }
 
-  private static String startFullRecalc(
+  private static Rollup buildFullRecalcRollup(
     List<Rollup__mdt> matchingMeta,
     Integer amountOfCalcItems,
     String queryString,
@@ -1691,21 +1703,14 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     Evaluator eval,
     InvocationPoint invokePoint
   ) {
-    // RollupLogger used to reference the default RollupControl__mdt.MaxLookupRowsBeforeBatching__c, as well as BatchChunkSize__c
-    RollupLogger rollupLogger = RollupLogger.Instance;
-    rollupLogger.log('Starting full recalc');
-    Boolean shouldQueue = amountOfCalcItems != SENTINEL_COUNT_VALUE && amountOfCalcItems < rollupLogger.rollupControl.MaxLookupRowsBeforeBatching__c;
+    Boolean shouldQueue = amountOfCalcItems != SENTINEL_COUNT_VALUE && amountOfCalcItems < RollupLogger.Instance.rollupControl.MaxLookupRowsBeforeBatching__c;
     if (shouldQueue) {
       List<SObject> calculationItems = Database.query(queryString);
       Rollup thisRollup = getRollup(matchingMeta, calcItemType, calculationItems, new Map<Id, SObject>(calculationItems), eval, invokePoint);
       thisRollup.isFullRecalc = true;
-      return thisRollup.runCalc();
+      return thisRollup;
     } else {
-      // batch to get calc items and then batch to rollup
-      return Database.executeBatch(
-        new RollupFullBatchRecalculator(queryString, invokePoint, matchingMeta, calcItemType, recordIds),
-        rollupLogger.rollupControl.BatchChunkSize__c.intValue()
-      );
+      return new RollupFullBatchRecalculator(queryString, invokePoint, matchingMeta, calcItemType, recordIds);
     }
   }
 
@@ -1718,6 +1723,9 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   private static void flattenBatches(Rollup outerRollup, List<Rollup> rollups) {
     for (Rollup rollup : rollups) {
       if (rollup.rollups.isEmpty() == false) {
+        for (Rollup innerRoll : rollup.rollups) {
+          innerRoll.isFullRecalc = rollup.isFullRecalc;
+        }
         // recurse through lists until there aren't any more nested rollups
         flattenBatches(outerRollup, rollup.rollups);
       } else {
@@ -1753,11 +1761,11 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     }
   }
 
-  private static void enforceFlowSpecificRules(FlowInput flowInput) {
+  private static void enforceFlowSpecificRules(FlowInput flowInput, SObjectType sObjectType) {
     try {
       if (flowInput.rollupContext == 'UPDATE' && flowInput.oldRecordsToRollup?.isEmpty() == true) {
         throw new IllegalArgumentException('Prior records to rollup collection required for rollup context: ' + flowInput.rollupContext);
-      } else if (flowInput.recordsToRollup?.isEmpty() == false) {
+      } else if (String.isBlank(flowInput.grandparentRelationshipFieldPath)) {
         SObject firstRecord = flowInput.recordsToRollup[0];
         SObject lookupItem = getSObjectFromName(
           flowInput.isRollupStartedFromParent ? flowInput.calcItemTypeWhenRollupStartedFromParent : flowInput.rollupSObjectName
@@ -1817,8 +1825,10 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     public void addRecordId(String recordId) {
       if (String.isNotBlank(recordId)) {
         this.hasQuery = true;
-        this.recordIds.add(recordId);
-        this.stringifiedRecordIds.add('\'' + recordId + '\'');
+        if (this.recordIds.contains(recordId) == false) {
+          this.recordIds.add(recordId);
+          this.stringifiedRecordIds.add('\'' + recordId + '\'');
+        }
       }
     }
 
@@ -1984,9 +1994,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     }
     /**
      * We have rollup operations to perform. That's great!
-     * BUT Field Definition CMDT records are stored like such: `Account.NumberOfEmployees`
-     * The generic "put" operation for SObjects (necessary later) doesn't support these "full length" field names
-     * Let's pare them down and get ready to rollup!
+     * Let's get ready to rollup!
      */
     Rollup batchRollup = new RollupAsyncProcessor(rollupInvokePoint);
     DescribeSObjectResult describeForSObject = sObjectType.getDescribe();
@@ -2167,7 +2175,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
         );
 
         for (SObject childToReparent : recordsToReparent) {
-          childToReparent.put(meta.LookupFieldOnCalcItem__c, mergedIdToCurrentParentId.get((Id)childToReparent.get(meta.LookupFieldOnCalcItem__c)));
+          childToReparent.put(meta.LookupFieldOnCalcItem__c, mergedIdToCurrentParentId.get((Id) childToReparent.get(meta.LookupFieldOnCalcItem__c)));
           recordsToUpdate.add(childToReparent);
         }
       }
@@ -2579,7 +2587,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
     RollupControl__mdt orgDefaults = this.rollupControl;
     for (Integer index = this.rollups.size() - 1; index >= 0; index--) {
       Rollup rollup = this.rollups[index];
-      rollup.isFullRecalc = this.isFullRecalc;
+      rollup.isFullRecalc = rollup.isFullRecalc || this.isFullRecalc;
 
       Boolean shouldRunSyncDeferred = this.getShouldRunSyncDeferred(rollup);
       Boolean couldRunSync =
